# stellar-nft-marketplace

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
contracts/: Cargo.toml  deploy.sh
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs
contracts/reward_token/: Cargo.toml
contracts/reward_token/src/: lib.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
src/: App.tsx  constants.ts  index.css  main.tsx
src/components/ErrorBoundary/: ErrorBoundary.tsx
src/components/NFTCard/: NFTCard.tsx
src/components/Navigation/: Navigation.tsx
src/components/ToastNotification/: ToastNotification.tsx
src/components/WalletButton/: WalletButton.tsx
src/contracts/: config.ts  mock.ts  stellar.ts
src/contracts/abis/: NFTContract.json  RewardToken.json  StakingContract.json
src/hooks/: useDebounce.ts  useNFTs.ts  useRewards.ts  useStaking.ts  useWallet.ts
src/pages/: Dashboard.tsx  Home.tsx  Staking.tsx
src/test/: formatBalance.test.ts  parseError.test.ts  toastQueue.test.ts
src/types/: index.ts
src/utils/: formatBalance.ts  parseError.ts  toastQueue.ts  validateEnv.ts
